--- a/src/main/java/mk/finki/ukim/mk/proekt/react_app/src/App.css
+++ b/src/main/java/mk/finki/ukim/mk/proekt/react_app/src/App.css
@@ -114,10 +114,31 @@
   width: 200px;
   height: 70px;
 }
-
+.userProfileIcon{
+  position: relative;
+  width: 50px;
+  height: 20px;
+}
 .keyImg{
   position: relative;
   width: 50px;
   height: 50px;
 }
-
+.signUpHeader{
+  color: black;
+}
+.btnSignUp{
+  position: relative;
+  float: right;
+}
+#btnEdit{
+    float: right;
+    width: 100px;
+    height: 30px;
+}
+#profileStyle{
+    height: 30px;
+}
+#profileFont{
+    font-size: 20px;
+}
