--- a/src/main/java/mk/finki/ukim/mk/proekt/react_app/src/App.css
+++ b/src/main/java/mk/finki/ukim/mk/proekt/react_app/src/App.css
@@ -45,7 +45,7 @@
 
 .keysData{
   position: relative;
-  left: 300px;
+  left: 350px;
   width: 500px;
 }
 .keyImage{
@@ -59,7 +59,7 @@
   color: #282c34;
 }
 .cardStyleById{
-  width: 1150px;
+  width: 1000px;
   position: absolute;
   overflow: visible;
 }
@@ -174,7 +174,17 @@
   padding: 6px 8px 6px 16px;
   height: 100%;
   position: fixed;
-  margin-left: 840px;
+  margin-left: 740px;
   margin-top:-170px;
-
+}
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #002233;
+  color: white;
+  text-align: center;
+  z-index: 5;
 }
